RESOLVED FIXED81860
[Chromium] Should check m_socket in SocketStreamHandleInternal::close()
https://bugs.webkit.org/show_bug.cgi?id=81860
Summary [Chromium] Should check m_socket in SocketStreamHandleInternal::close()
Kenichi Ishibashi
Reported 2012-03-21 18:21:44 PDT
See the chromium bug report: http://crbug.com/118846 This problem not always occurs (maybe depends on server implementation).
Attachments
Patch (1.49 KB, patch)
2012-03-21 18:26 PDT, Kenichi Ishibashi
no flags
Patch (1.71 KB, patch)
2012-03-21 23:14 PDT, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2012-03-21 18:26:10 PDT
Kenichi Ishibashi
Comment 2 2012-03-21 18:29:44 PDT
(In reply to comment #1) > Created an attachment (id=133161) [details] > Patch This patch doesn't include test because user interaction (closing alert popup) is needed to reproduce the problem.
Kent Tamura
Comment 3 2012-03-21 20:06:41 PDT
(In reply to comment #2) > (In reply to comment #1) > > Created an attachment (id=133161) [details] [details] > > Patch > > This patch doesn't include test because user interaction (closing alert popup) is needed to reproduce the problem. Would you add reasons why m_socket can be 0 and why alert() affects to ChangeLog?
Kenichi Ishibashi
Comment 4 2012-03-21 23:14:49 PDT
Kenichi Ishibashi
Comment 5 2012-03-21 23:15:52 PDT
> Would you add reasons why m_socket can be 0 and why alert() affects to ChangeLog? Thank you for review. Added explanations to ChangeLog.
Kent Tamura
Comment 6 2012-03-21 23:26:11 PDT
Comment on attachment 133192 [details] Patch ok
WebKit Review Bot
Comment 7 2012-03-22 00:26:02 PDT
Comment on attachment 133192 [details] Patch Clearing flags on attachment: 133192 Committed r111656: <http://trac.webkit.org/changeset/111656>
WebKit Review Bot
Comment 8 2012-03-22 00:26:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.