[Chromium] Should check m_socket in SocketStreamHandleInternal::close() https://bugs.webkit.org/show_bug.cgi?id=81860

Reviewed by Kent Tamura.

m_socket could be NULL if WebSocket::resume() is called after SocketStreamHandle::didClose() is called.
This could happen when the page shows a popup dialog (by using alert()) immediately after closing an WebSocket object.

* src/SocketStreamHandle.cpp:
(WebCore::SocketStreamHandleInternal::close): Ensures m_socket is not NULL.


Canonical link: https://commits.webkit.org/99154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111656 268f45cc-cd09-0410-ab3c-d52691b4dbfc